--- a/LDA_paper/document.tex
+++ b/LDA_paper/document.tex
@@ -1,42 +1,195 @@
-%%This is a very basic article template.
-%%There is just one section and two subsections.
-\documentclass[11pt,twocolumn,varwidth=true,a4paper,fleqn]{article}
+% This is "sig-alternate.tex" V2.1 April 2013
+% This file should be compiled with V2.5 of "sig-alternate.cls" May 2012
+%
+% This example file demonstrates the use of the 'sig-alternate.cls'
+% V2.5 LaTeX2e document class file. It is for those submitting
+% articles to ACM Conference Proceedings WHO DO NOT WISH TO
+% STRICTLY ADHERE TO THE SIGS (PUBS-BOARD-ENDORSED) STYLE.
+% The 'sig-alternate.cls' file will produce a similar-looking,
+% albeit, 'tighter' paper resulting in, invariably, fewer pages.
+%
+% ----------------------------------------------------------------------------------------------------------------
+% This .tex file (and associated .cls V2.5) produces:
+%       1) The Permission Statement
+%       2) The Conference (location) Info information
+%       3) The Copyright Line with ACM data
+%       4) NO page numbers
+%
+% as against the acm_proc_article-sp.cls file which
+% DOES NOT produce 1) thru' 3) above.
+%
+% Using 'sig-alternate.cls' you have control, however, from within
+% the source .tex file, over both the CopyrightYear
+% (defaulted to 200X) and the ACM Copyright Data
+% (defaulted to X-XXXXX-XX-X/XX/XX).
+% e.g.
+% \CopyrightYear{2007} will cause 2007 to appear in the copyright line.
+% \crdata{0-12345-67-8/90/12} will cause 0-12345-67-8/90/12 to appear in the copyright line.
+%
+% ---------------------------------------------------------------------------------------------------------------
+% This .tex source is an example which *does* use
+% the .bib file (from which the .bbl file % is produced).
+% REMEMBER HOWEVER: After having produced the .bbl file,
+% and prior to final submission, you *NEED* to 'insert'
+% your .bbl file into your source .tex file so as to provide
+% ONE 'self-contained' source file.
+%
+% ================= IF YOU HAVE QUESTIONS =======================
+% Questions regarding the SIGS styles, SIGS policies and
+% procedures, Conferences etc. should be sent to
+% Adrienne Griscti (griscti@acm.org)
+%
+% Technical questions _only_ to
+% Gerald Murray (murray@hq.acm.org)
+% ===============================================================
+%
+% For tracking purposes - this is V2.0 - May 2012
+
+\documentclass{sig-alternate-05-2015}
+
 \usepackage{amssymb}
 \usepackage[T1]{fontenc}
 \usepackage{bbm}
-
 \usepackage{amsthm}
-% \usepackage{amsmath}
 \usepackage[utf8]{inputenc}
-
 \usepackage{lipsum}
 \usepackage{graphicx}
 \usepackage[caption=false]{subfig}
-
 \usepackage{graphicx}
 \usepackage{csvsimple}
 \usepackage{array}
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{pgfplotstable}
-
 \usepackage[demo]{graphicx}
-%\usepackage{caption}
 \usepackage{subcaption}
+
+\usepackage{amsmath}
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
+\usepackage{varwidth}
 
 \newtheorem{lemma}{Lemma}
 \newtheorem{definition}{Definition}
 \newtheorem{remark}{Remark}
 \newtheorem{corollary}{Corollary}
- 
+
 \begin{document}
 \nocite{*}
+% Copyright
+\setcopyright{acmcopyright}
+%\setcopyright{acmlicensed}
+%\setcopyright{rightsretained}
+%\setcopyright{usgov}
+%\setcopyright{usgovmixed}
+%\setcopyright{cagov}
+%\setcopyright{cagovmixed}
 
+
+% DOI
+\doi{10.475/123_4}
+
+% ISBN
+\isbn{123-4567-24-567/08/06}
+
+%Conference
+\conferenceinfo{PLDI '13}{June 16--19, 2013, Seattle, WA, USA}
+
+\acmPrice{\$15.00}
+
+%
+% --- Author Metadata here ---
+\conferenceinfo{WOODSTOCK}{'97 El Paso, Texas USA}
+%\CopyrightYear{2007} % Allows default copyright year (20XX) to be over-ridden - IF NEED BE.
+%\crdata{0-12345-67-8/90/01}  % Allows default copyright data (0-89791-88-6/97/05) to be over-ridden - IF NEED BE.
+% --- End of Author Metadata ---
 \title{Concept Drift Detection in Distributed Systems through LDA
-Model Monitoring}
-\date{}
-\maketitle
+Model Monitoring\titlenote{(Produces the permission block, and
+copyright information). For use with
+SIG-ALTERNATE.CLS. Supported by ACM.}}
+\subtitle{[Extended Abstract]
+\titlenote{A full version of this paper is available as
+\textit{Author's Guide to Preparing ACM SIG Proceedings Using
+\LaTeX$2_\epsilon$\ and BibTeX} at
+\texttt{www.acm.org/eaddress.htm}}}
+%
+% You need the command \numberofauthors to handle the 'placement
+% and alignment' of the authors beneath the title.
+%
+% For aesthetic reasons, we recommend 'three authors at a time'
+% i.e. three 'name/affiliation blocks' be placed beneath the title.
+%
+% NOTE: You are NOT restricted in how many 'rows' of
+% "name/affiliations" may appear. We just ask that you restrict
+% the number of 'columns' to three.
+%
+% Because of the available 'opening page real-estate'
+% we ask you to refrain from putting more than six authors
+% (two rows with three columns) beneath the article title.
+% More than six makes the first-page appear very cluttered indeed.
+%
+% Use the \alignauthor commands to handle the names
+% and affiliations for an 'aesthetic maximum' of six authors.
+% Add names, affiliations, addresses for
+% the seventh etc. author(s) as the argument for the
+% \additionalauthors command.
+% These 'additional authors' will be output/set for you
+% without further effort on your part as the last section in
+% the body of your article BEFORE References or any Appendices.
 
+\numberofauthors{8} %  in this sample file, there are a *total*
+% of EIGHT authors. SIX appear on the 'first-page' (for formatting
+% reasons) and the remaining two appear in the \additionalauthors section.
+%
+\author{
+% You can go ahead and credit any number of authors here,
+% e.g. one 'row of three' or two rows (consisting of one row of three
+% and a second row of one, two or three).
+%
+% The command \alignauthor (no curly braces needed) should
+% precede each author name, affiliation/snail-mail address and
+% e-mail address. Additionally, tag each line of
+% affiliation/address with \affaddr, and tag the
+% e-mail address with \email.
+%
+% 1st. author
+\alignauthor
+Ran Bernstein\\
+       \affaddr{Technion -- Israel Institute of Technology}\\
+       \affaddr{Haifa 32000 Israel}\\
+       \email{Bernstein.Ran@Gmail.com}
+% 2nd. author
+\alignauthor
+ Daniel Keren\\
+       \affaddr{Haifa University}\\
+       \affaddr{Haifa 31905 Israel}\\
+       \email{dkeren@cs.haifa.ac.il}
+% 3rd. author
+\alignauthor 
+Margarita Osadchy\\
+       \affaddr{Haifa University}\\
+       \affaddr{Haifa 31905 Israel}\\
+       \email{rita@cs.haifa.ac.il }
+\and  % use '\and' if you need 'another row' of author names
+% 4th. author
+\alignauthor Assaf Schuster\\
+       \affaddr{Technion -- Israel Institute of Technology}\\
+       \affaddr{Haifa 32000 Israel}\\
+       \email{assaf@cs.technion.ac.il}
+}
+% There's nothing stopping you putting the seventh, eighth, etc.
+% author on the opening page (as the 'third row') but we ask,
+% for aesthetic reasons that you place these 'additional authors'
+% in the \additional authors block, viz.
+\additionalauthors{Additional authors: John Smith (The Th{\o}rv{\"a}ld Group,
+email: {\texttt{jsmith@affiliation.org}}) and Julius P.~Kumquat
+(The Kumquat Consortium, email: {\texttt{jpkumquat@consortium.net}}).}
+\date{30 July 1999}
+% Just remember to make sure that the TOTAL number of authors
+% is the number that will appear on the first page PLUS the
+% number that will appear in the \additionalauthors section.
+
+\maketitle
 \begin{abstract}
 Linear Discriminant Analysis (LDA) is a popular algorithm used for
 classification and dimensionality reduction in many fields. 
@@ -62,6 +215,57 @@ our approach reduces communication by up to two orders
 of magnitude and outperforms the naive algorithm the periodically computes the
 global model while guaranteeing a bounded global model.
 \end{abstract}
+
+
+%
+% The code below should be generated by the tool at
+% http://dl.acm.org/ccs.cfm
+% Please copy and paste the code instead of the example below. 
+%
+\begin{CCSXML}
+<ccs2012>
+ <concept>
+  <concept_id>10010520.10010553.10010562</concept_id>
+  <concept_desc>Computer systems organization~Embedded systems</concept_desc>
+  <concept_significance>500</concept_significance>
+ </concept>
+ <concept>
+  <concept_id>10010520.10010575.10010755</concept_id>
+  <concept_desc>Computer systems organization~Redundancy</concept_desc>
+  <concept_significance>300</concept_significance>
+ </concept>
+ <concept>
+  <concept_id>10010520.10010553.10010554</concept_id>
+  <concept_desc>Computer systems organization~Robotics</concept_desc>
+  <concept_significance>100</concept_significance>
+ </concept>
+ <concept>
+  <concept_id>10003033.10003083.10003095</concept_id>
+  <concept_desc>Networks~Network reliability</concept_desc>
+  <concept_significance>100</concept_significance>
+ </concept>
+</ccs2012>  
+\end{CCSXML}
+
+\ccsdesc[500]{Computer systems organization~Embedded systems}
+\ccsdesc[300]{Computer systems organization~Redundancy}
+\ccsdesc{Computer systems organization~Robotics}
+\ccsdesc[100]{Networks~Network reliability}
+
+
+%
+% End generated code
+%
+
+%
+%  Use this command to print the description
+%
+\printccsdesc
+
+% We no longer use \terms command
+%\terms{Theory}
+
+\keywords{ACM proceedings; \LaTeX; text tagging}
 
 \section{Introduction}
 A common challenge when mining data streams is that
@@ -346,7 +550,7 @@ Express $S, p$ and $q$ as their values at synchronization with the addition of t
 average of the local drifts:
 \begin{equation*} 
 \begin{split}
-(S,p,q) & = \frac{1}{k} \sum_i (S^i,p^i,p^j) \\
+(S,p,q) & = \frac{1}{k} \sum_i (S^i,p^i,q^j) \\
  & = (S_0,p_0,q_0) + \frac{1}{k} \sum_i (\Delta_s^i,\delta^i_p,\delta_q^i). \\
 \end{split}
 \end{equation*}
@@ -414,7 +618,39 @@ and satisfies the inequality:
  operator norm of the matrix A.
 \end{lemma}
 The proof of lemma \ref{convexBound} is given in Appendix A.
+
 \section{Method}
+
+
+$x_{old}^i(p)$ and $x_{old}^i(q)$ are the oldest samples from each class in the
+sliding window of the i'th node.
+
+\begin{algorithm}
+\caption{Node i update with new samples x; y.}\label{DLDA}
+\begin{algorithmic}[1]
+\Procedure{Update}{}
+\If {$y$ is class P} 
+\State $p^i = p^i + x - x_{old}^i(p)$
+\State $S^i = S^i +xx^T - x_{old}^i(p)*(x_{old}^i(p))^T$
+\Else 
+\State $q^i = q^i + x -x_{old}^i(q)$
+\State $S^i = S^i +xx^T - x_{old}^i(q)*(x_{old}^i(q))^T$
+\EndIf
+\State $(\Delta_s^i,\delta^i_p,\delta_q^i) = (S^i-S^i_0,p^i-p^i_0,q^i-q^i_0)$
+%\If{The bound in \ref{eq:convexBound} is not satisfied}
+
+\If { \begin{varwidth}[t]{\linewidth}
+$||B_0^{-1}\delta||+ (||w_0||+R_0)(||B_0^{-1}L||+||B_0^{-1}M||) $ \par
+\hskip\algorithmicindent $>R_0$} 
+\end{varwidth}
+\State Report violation to coordinator
+\State Recive new global $w_0$, $u_0$
+\State $(S_0^i,p_0^i,q_0^i) = (S^i,p^i,q^i)$
+\EndIf
+
+\EndProcedure
+\end{algorithmic}
+\end{algorithm}
 \subsection{Distributed LDA Monitoring}
 
 \subsection{Probabilistic Distributed LDA Monitoring}
@@ -731,9 +967,20 @@ We reduce communication by an order of two magnitudes while maintaining a
 valid model.
  \section*{Acknowledgements}
 Thanks to Moshe Gabel for the help in kicking off this research.
-\bibliographystyle{unsrt}
-\bibliography{bib}
 
+%
+% The following two commands are all you need in the
+% initial runs of your .tex file to
+% produce the bibliography for the citations in your paper.
+\bibliographystyle{abbrv}
+\bibliography{bib}  % sigproc.bib is the name of the Bibliography in this case
+% You must have a proper ".bib" file
+%  and remember to run:
+% latex bibtex latex latex
+% to resolve all references
+%
+% ACM needs 'a single self-contained file'!
+%
 
 \appendix
 \section{Appendix} \label{AppendixA}
@@ -868,5 +1115,4 @@ This concludes our proof.
 From lemmas \ref{delta}, \ref{L} and \ref{M} we can conclude that $\mathcal{G}$
 is convex.
 \end{corollary}
-
 \end{document}
