Framework description and fix for our contribution

--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -17,7 +17,7 @@
 @article{fisher1936use,
   title={The use of multiple measurements in taxonomic problems},
   author={Fisher, Ronald A},
-  journal={Annals of eugenics},
+  journal={Annals of Eugenics},
   volume={7},
   number={2},
   pages={179--188},
@@ -244,4 +244,68 @@
   pages={1--9},
   year={2015},
   organization={IEEE}
+}
+@book{brodsky2013nonparametric,
+  title={Nonparametric Methods in Change Point Problems},
+  author={Brodsky, E. and Darkhovsky, B.S.},
+  series={Mathematics and Its Applications},
+  year={2013},
+  publisher={Springer Netherlands}
+}
+@book{ChenGupta2000,
+author = "Chen, J. and Gupta, A. K.",
+title = "Parametric statistical change point analysis",
+publisher = "Birkhauser",
+year = "2000",
+}
+@inproceedings{icml2014c2_harel14,
+    Publisher = {JMLR Workshop and Conference Proceedings},
+    Title = {Concept Drift Detection Through Resampling},
+    Author = {Maayan Harel and Shie Mannor and Ran El-yaniv and Koby Crammer},
+    Editor = {Tony Jebara and Eric P. Xing},
+    Year = {2014},
+    Booktitle = {Proceedings of the 31st International Conference on Machine Learning (ICML-14)},
+    Pages = {1009-1017}
+   }
+@Inbook{Nishida2007,
+author="Nishida, K. Yamauchi, K.",
+chapter="Detecting Concept Drift Using Statistical Testing",
+title="Discovery Science: 10th International Conference, DS 2007 Sendai, Japan, October 1-4, 2007. Proceedings",
+year="2007",
+publisher="Springer Berlin Heidelberg",
+pages="264--269"
+}
+
+@inproceedings{Deva,
+  author    = {Bharath Hariharan and
+               Jitendra Malik and
+               Deva Ramanan},
+  title     = {Discriminative Decorrelation for Clustering and Classification},
+  booktitle = {Computer Vision - {ECCV} 2012 - 12th European Conference on Computer
+               Vision, Florence, Italy, October 7-13, 2012, Proceedings, Part {IV}},
+  pages     = {459--472},
+  year      = {2012}
+}
+@inproceedings{eSVM,
+  author    = {Tomasz Malisiewicz and
+               Abhinav Gupta and
+               Alexei A. Efros},
+  title     = {Ensemble of exemplar-SVMs for object detection and beyond},
+  booktitle = {{IEEE} International Conference on Computer Vision, {ICCV} 2011, Barcelona,
+               Spain, November 6-13, 2011},
+  pages     = {89--96},
+  year      = {2011}
+}
+
+@inproceedings{ROSS,
+  author    = {Ross B. Girshick and
+               Jeff Donahue and
+               Trevor Darrell and
+               Jitendra Malik},
+  title     = {Rich Feature Hierarchies for Accurate Object Detection and Semantic
+               Segmentation},
+  booktitle = {2014 {IEEE} Conference on Computer Vision and Pattern Recognition,
+               {CVPR} 2014, Columbus, OH, USA, June 23-28, 2014},
+  pages     = {580--587},
+  year      = {2014}
 }
